--- a/CGFinalJustGame/CGFinalJustGame.csproj
+++ b/CGFinalJustGame/CGFinalJustGame.csproj
@@ -55,6 +55,12 @@
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\..\..\Downloads\GameAssignment\GameClassLibrary\GameClassLibrary.csproj">
+      <Project>{85e1cbc0-d0fd-40e4-8bba-e8ea033ef64c}</Project>
+      <Name>GameClassLibrary</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
